Change adout page text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -20,7 +20,8 @@
             <p class="p-about">
                 I’m a self-thought developer. This project is my first project. So I know it’s not good
                 built, and nice looking project. But still its something, I guess. I used Dark Sky and Mapbox API's,
-                as well as Node.js, Express.js, JS, HTML and CSS for this project.
+                as well as Node.js, Express.js, JS, HTML and CSS for this project. I also made this web app responsive
+                to other devices as well.
             </p>
             <span class="footer" id="footer-about">{{>footer}}</span>
         </div>
